2223 : fix right data-field wrap . fix yaml

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -125,6 +125,10 @@ body {
   word-break: break-all;
 }
 
+.data-field-2223 {
+  font-size: 16px;
+}
+
 @media only screen and (max-width: 768px) {
 
   .nav, .playground, .field {
